# ai-query-crew

./: README.md
ai-query-crew/postgres-teste/: crew_query.py  crew_query_streamlit.py  crew_query_test.py  postgres_connection.py  postgres_databases.py  pyproject.toml  schema_generator.py  test_conn.py
ai-query-crew/postgres-teste/schemas/: schema_ecommerce.yaml
ai-query-crew/schemas/: schema_clinica.yaml  schema_ecommerce.yaml
